--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 
 </head>
 
@@ -47,7 +47,7 @@ and open the template in the editor.
 
 <div class="flex">
 
-  <img src="../img/Logo.png" alt="Logo" class="logo2"></a>
+  <img src="./img/Logo.png" alt="Logo" class="logo2"></a>
 
 <h1 class="rainbow">
  < SF Hacks >
