--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@ and open the template in the editor.
 <head>
   <title>SF Hacks</title>
 
-  <img class="bg bgpic" src="../img/sfhacksteam.jpg" >
+  <img class="bg bgpic" src="./img/sfhacksteam.jpg" >
   <!--
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script></head>
 </head>
 
