--- a/sponsor.html
+++ b/sponsor.html
@@ -52,7 +52,7 @@ and open the template in the editor.
 
 
 
-  <img class="sponsors" src="./img/sponsors.png" >
+  <img class="sponsors" src="./img/sponsors.PNG" >
 
   <p class="h1spo">
     Interested in sponsoring? E-mail us at
