--- a/sponsor.html
+++ b/sponsor.html
@@ -52,7 +52,7 @@ and open the template in the editor.
 
 
 
-  <img class="sponsors" src="./img/Sponsors.png" >
+  <img class="sponsors" src="./img/Sponsors.png" alt="sponsors" >
 
   <p class="h1spo">
     Interested in sponsoring? E-mail us at
